Corrected the comment and cool meme! BTW

--- a/hw_0_linear_algebra.ipynb
+++ b/hw_0_linear_algebra.ipynb
@@ -96,7 +96,7 @@
     "        self.assertTrue(torch.equal(result, expected_result))\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    # TODO uncomment the test. All tesh should be passed\n",
+    "    # TODO uncomment the test. All test should be passed\n",
     "    unittest.main(argv=[''], verbosity=2, exit=False)\n",
     "    pass"
    ]
