Deleted inconvinient code

--- a/hw_0_linear_algebra.ipynb
+++ b/hw_0_linear_algebra.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
     "stacked_tensor = torch.Tensor(secret_img_channels).permute(1,2,0)\n",
     "\n",
     "# Visualize the tensor\n",
-    "plt.imshow(stacked_tensor, cmap='grey')\n",
+    "plt.imshow(stacked_tensor)\n",
     "plt.axis(False)\n",
     "plt.show()\n"
    ]
