Refactored some code

--- a/hw_0_linear_algebra.ipynb
+++ b/hw_0_linear_algebra.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
       "test_matrix_vector_multiply (__main__.TestMatrixVectorMultiplication.test_matrix_vector_multiply) ... ok\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.004s\n",
+      "Ran 1 test in 0.072s\n",
       "\n",
       "OK\n"
      ]
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -131,6 +131,14 @@
       "Channel 1 shape =  (512, 868)\n",
       "Channel 2 shape =  (512, 868)\n",
       "Channel 3 shape =  (512, 868)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Sanya\\AppData\\Local\\Temp\\ipykernel_23684\\54024302.py:21: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at ..\\torch\\csrc\\utils\\tensor_new.cpp:264.)\n",
+      "  stacked_tensor = torch.Tensor(secret_img_channels).permute(1,2,0)\n"
      ]
     },
     {
@@ -177,7 +185,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_channel(channel, color_index, axis, small_tensor):\n",
+    "        \"\"\"\n",
+    "        Plot a specific RGB channel in 3D space using a scatter plot.\n",
+    "\n",
+    "        Parameters:\n",
+    "            channel (torch.Tensor): Input channel tensor.\n",
+    "            color_index (int): Index representing the color channel (0 for Red, 1 for Green, 2 for Blue).\n",
+    "            axis (matplotlib.axes._subplots.Axes3D): 3D plot axis.\n",
+    "            small_tensor (torch.Tensor): Downsampled input tensor for visualization.\n",
+    "\n",
+    "        Returns:\n",
+    "            None\n",
+    "        \"\"\"\n",
+    "        color_map = {0: 'Blues_r', 1: 'Greens_r', 2: 'Reds_r'}\n",
+    "        z, y, x = channel.nonzero(as_tuple=True)\n",
+    "        values = small_tensor[z, y, x].numpy()\n",
+    "        axis.scatter(z.numpy(), y.numpy(), x.numpy() + color_index, c=values, cmap=color_map[color_index], s=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -193,38 +226,45 @@
    ],
    "source": [
     "import torch\n",
-    "from PIL import Image\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
     "\n",
-    "# Sample tensor (using random data for demonstration)\n",
-    "tensor = stacked_tensor\n",
+    "def visualize_3d_channels(stacked_tensor, stride=5):\n",
+    "    \"\"\"\n",
+    "    Visualize RGB channels of a stacked tensor in 3D space using a scatter plot.\n",
     "\n",
-    "# Down-sample the tensor for visualization\n",
-    "stride = 5\n",
-    "tensor_small = tensor[::stride,::stride,:-1]\n",
+    "    Parameters:\n",
+    "        stacked_tensor (torch.Tensor): Input stacked tensor with RGB channels.\n",
+    "        stride (int): Downsampling factor for visualization.\n",
     "\n",
-    "r_channel, g_channel, b_channel = tensor_small.chunk(3, dim=2)\n",
+    "    Returns:\n",
+    "        None\n",
+    "    \"\"\"\n",
+    "    # Down-sample the tensor for visualization\n",
+    "    tensor_small = stacked_tensor[::stride, ::stride, :-1]\n",
     "\n",
-    "fig = plt.figure(figsize=(10, 10))\n",
+    "    # Split the tensor into RGB channels\n",
+    "    r_channel, g_channel, b_channel = tensor_small.chunk(3, dim=2)\n",
     "\n",
-    "ax = fig.add_subplot(111, projection='3d')\n",
+    "    fig = plt.figure(figsize=(10, 10))\n",
+    "    plot_axis = fig.add_subplot(111, projection='3d')\n",
     "\n",
-    "# Extracting x, y, z coordinates and values\n",
-    "def plot_channel(channel, color):\n",
-    "    encode = {0: 'Blues_r', 1: 'Greens_r', 2: 'Reds_r'}\n",
-    "    z, y, x = channel.nonzero(as_tuple=True)\n",
-    "    values = tensor_small[z, y, x].numpy()\n",
-    "    ax.scatter(z.numpy(), y.numpy(), x.numpy()+color, c=values, cmap=encode[color], s=5)\n",
+    "    for color_index, channel in enumerate([r_channel, g_channel, b_channel]):\n",
+    "        plot_channel(channel=channel, color_index=color_index, axis=plot_axis, small_tensor=tensor_small)\n",
     "\n",
-    "for i, c in enumerate([r_channel, g_channel, b_channel]):\n",
-    "    plot_channel(c, i)\n",
+    "    plot_axis.set_facecolor('#1f1f1f')\n",
+    "    plot_axis.set_axis_off()\n",
+    "    plot_axis.view_init(elev=40, azim=20)\n",
+    "    plt.show()\n",
     "\n",
-    "ax.set_facecolor('#1f1f1f')\n",
-    "ax.set_axis_off()\n",
-    "ax.view_init(elev=40, azim=20) \n",
-    "plt.show()\n"
+    "visualize_3d_channels(stacked_tensor=stacked_tensor)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
