Added comments and docstrings

--- a/hw_1_linear_regression_as_neural_net.ipynb
+++ b/hw_1_linear_regression_as_neural_net.ipynb
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 383,
    "metadata": {},
    "outputs": [
     {
@@ -252,8 +252,8 @@
     "    # the same scale.\n",
     "    return np.array([(xi - mean) / std for xi in feature])\n",
     "\n",
-    "#TODO implement matrix for the X features\n",
     "def transform_to_fmatrix(*args):\n",
+    "    \"\"\"Transform individual feature arrays into a feature matrix.\"\"\"\n",
     "    return np.stack(args, axis=1)\n",
     "\n",
     "# X = transform_to_fmatrix(normalize(new_df['bed'].values), \n",
@@ -262,38 +262,31 @@
     "# y = normalize(new_df['price'].values).reshape(-1, 1)\n",
     "\n",
     "#for test\n",
-    "x1 = np.array([2,4,6,8,10,12,14,16,18,20])\n",
-    "x2 = np.array([12,14,16,18,110,112,114,116,118,120])\n",
-    "x3 = np.array([2,4,6,8,10,12,14,16,18,20])\n",
+    "# Features and target for testing\n",
+    "x1 = np.array([2, 4, 6, 8, 10, 12, 14, 16, 18, 20])\n",
+    "x2 = np.array([12, 14, 16, 18, 110, 112, 114, 116, 118, 120])\n",
+    "x3 = np.array([2, 4, 6, 8, 10, 12, 14, 16, 18, 20])\n",
     "X = transform_to_fmatrix(x1, x2, x3)\n",
-    "y = np.array([1,2,3,4,5,6,7,8,9,10]).reshape(-1, 1)\n",
-    "\n",
-    "# print('Feature matrix -> ', X)\n",
-    "# print('Target vector -> ', y)\n",
-    "# print(f\"Shapes: X.shape={X.shape}, y.shape={y.shape}\")\n",
+    "y = np.array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10]).reshape(-1, 1)\n",
     "\n",
     "def compute_mse(W, b, X, y):\n",
     "    \"\"\"Compute the Mean Squared Error.\"\"\"\n",
-    "    #TODO add detailed comments with explanation of your algorithm implementation\n",
     "    return np.mean((y - (X @ W + b))**2)\n",
     "\n",
-    "\n",
     "def compute_gradients(W, b, X, y):\n",
+    "    \"\"\"Compute gradients of the loss with respect to weights and bias.\"\"\"\n",
     "    n = len(y)\n",
-    "    #TODO add detailed comments with explanation of your algorithm implementation\n",
-    "    # TODO implement me \n",
-    "    predicted_y = X @ W  + b\n",
+    "    predicted_y = X @ W + b\n",
     "    difference = y - predicted_y\n",
     "\n",
     "    dW = (-2/n) * X.T @ difference\n",
     "    db = (-2/n) * difference\n",
     "    return dW, db\n",
     "\n",
-    "\n",
     "def gradient_descent(X, y, W_init, b_init, learning_rate, num_iterations):\n",
+    "    \"\"\"Perform gradient descent to minimize the Mean Squared Error.\"\"\"\n",
     "    W, b = W_init, b_init\n",
     "    mse_history = []\n",
-    "    #TODO add detailed comments with explanation of your algorithm implementation\n",
     "    for i in range(num_iterations):\n",
     "        dW, db = compute_gradients(W, b, X, y)\n",
     "        W -= learning_rate * dW\n",
@@ -303,19 +296,20 @@
     "    \n",
     "    return W, b, mse_history\n",
     "\n",
-    "\n",
     "# Parameters\n",
     "learning_rate = 0.001\n",
     "num_iterations = 100\n",
     "\n",
-    "#TODO implement matrix for the W \n",
+    "# Initial weights and bias\n",
     "initial_W = np.zeros((3, 1))\n",
     "initial_b = np.ones((1, 1))\n",
     "\n",
+    "# Run gradient descent\n",
     "final_W, final_b, mse_history = gradient_descent(X, y, initial_W, initial_b, learning_rate, num_iterations)\n",
     "\n",
-    "for i in range(0,len(mse_history),10):\n",
-    "    print(\"MSE:\",mse_history[i])\n"
+    "# Print MSE every 10 iterations\n",
+    "for i in range(0, len(mse_history), 10):\n",
+    "    print(\"MSE:\", mse_history[i])\n"
    ]
   },
   {
