--- a/hw_4_simple_perceptron.ipynb
+++ b/hw_4_simple_perceptron.ipynb
@@ -30,9 +30,20 @@
     "\n",
     "### Accuracy Calculation\n",
     "- After training, evaluate the model on a test set.\n",
-    "- Calculate the accuracy of the model: \\(\\frac{\\text{Number of Correct Predictions}}{\\text{Total Predictions}}\\).\n",
+    "- Calculate the accuracy of the model: $$\\frac{\\text{Number of Correct Predictions}}{\\text{Total Predictions}}$$.\n",
     "- Document the model's performance and any insights gained during the development process.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
