--- a/hw_3_linear_neural_networks_for_classification copy.ipynb
+++ b/hw_3_linear_neural_networks_for_classification copy.ipynb
@@ -140,10 +140,10 @@
       " [0.5372549  0.52156863 0.47843137 ... 0.58039216 0.57647059 1.        ]] \n",
       "\n",
       "Shuffled train data:\n",
-      " [[0.87058824 0.8745098  0.85490196 ... 0.83529412 0.81960784 0.        ]\n",
+      " [[0.75686275 0.71372549 0.69019608 ... 0.25098039 0.21176471 1.        ]\n",
       " [0.21960784 0.18039216 0.05490196 ... 0.56470588 0.36078431 0.        ]\n",
-      " [0.49803922 0.39215686 0.25098039 ... 0.3254902  0.21960784 0.        ]\n",
       " [0.15294118 0.18823529 0.21568627 ... 0.72941176 0.02352941 0.        ]\n",
+      " [0.5372549  0.52156863 0.47843137 ... 0.58039216 0.57647059 1.        ]\n",
       " [0.15294118 0.16862745 0.17647059 ... 0.16862745 0.14901961 0.        ]] \n",
       "\n",
       "Cats test data:\n",
@@ -161,11 +161,11 @@
       " [0.46666667 0.41568627 0.35294118 ... 0.52156863 0.49411765 1.        ]] \n",
       "\n",
       "Shuffled test data:\n",
-      " [[0.46666667 0.3372549  0.24705882 ... 0.52156863 0.40392157 0.        ]\n",
-      " [0.02745098 0.02745098 0.02745098 ... 0.07058824 0.0627451  1.        ]\n",
-      " [0.23529412 0.21960784 0.16862745 ... 0.5254902  0.49019608 0.        ]\n",
+      " [[0.36078431 0.29019608 0.22745098 ... 0.54117647 0.51764706 1.        ]\n",
+      " [0.46666667 0.3372549  0.24705882 ... 0.52156863 0.40392157 0.        ]\n",
       " [0.09803922 0.09411765 0.08627451 ... 0.09803922 0.08627451 1.        ]\n",
-      " [0.14509804 0.14901961 0.14509804 ... 0.38039216 0.2745098  1.        ]] \n",
+      " [0.23529412 0.21960784 0.16862745 ... 0.5254902  0.49019608 0.        ]\n",
+      " [0.88627451 0.89411765 0.89019608 ... 0.99607843 0.89411765 0.        ]] \n",
       "\n"
      ]
     }
@@ -196,46 +196,46 @@
      "output_type": "stream",
      "text": [
       "X_train:\n",
-      " [[0.87058824 0.8745098  0.85490196 ... 0.84705882 0.83529412 0.81960784]\n",
+      " [[0.75686275 0.71372549 0.69019608 ... 0.32156863 0.25098039 0.21176471]\n",
       " [0.21960784 0.18039216 0.05490196 ... 0.09411765 0.56470588 0.36078431]\n",
-      " [0.49803922 0.39215686 0.25098039 ... 0.36862745 0.3254902  0.21960784]\n",
+      " [0.15294118 0.18823529 0.21568627 ... 0.7372549  0.72941176 0.02352941]\n",
       " ...\n",
-      " [0.09411765 0.06666667 0.0627451  ... 0.50588235 0.43921569 0.40392157]\n",
-      " [0.5372549  0.52156863 0.47843137 ... 0.57647059 0.58039216 0.57647059]\n",
+      " [0.50196078 0.37254902 0.17647059 ... 0.38823529 0.36862745 0.31764706]\n",
+      " [0.87058824 0.8745098  0.85490196 ... 0.84705882 0.83529412 0.81960784]\n",
       " [0.56470588 0.41568627 0.29019608 ... 0.92941176 0.92941176 0.84705882]] \n",
       "\n",
       "y_train:\n",
-      " [[0.]\n",
-      " [0.]\n",
-      " [0.]\n",
+      " [[1.]\n",
       " [0.]\n",
       " [0.]\n",
       " [1.]\n",
+      " [0.]\n",
       " [1.]\n",
+      " [0.]\n",
       " [1.]\n",
-      " [1.]\n",
+      " [0.]\n",
       " [1.]] \n",
       "\n",
       "X_test:\n",
-      " [[0.46666667 0.3372549  0.24705882 ... 0.65098039 0.52156863 0.40392157]\n",
-      " [0.02745098 0.02745098 0.02745098 ... 0.07843137 0.07058824 0.0627451 ]\n",
-      " [0.23529412 0.21960784 0.16862745 ... 0.6        0.5254902  0.49019608]\n",
+      " [[0.36078431 0.29019608 0.22745098 ... 0.63529412 0.54117647 0.51764706]\n",
+      " [0.46666667 0.3372549  0.24705882 ... 0.65098039 0.52156863 0.40392157]\n",
+      " [0.09803922 0.09411765 0.08627451 ... 0.12156863 0.09803922 0.08627451]\n",
       " ...\n",
-      " [0.46666667 0.41568627 0.35294118 ... 0.5254902  0.52156863 0.49411765]\n",
       " [0.50980392 0.47843137 0.49019608 ... 0.30980392 0.33333333 0.34901961]\n",
-      " [0.88627451 0.89411765 0.89019608 ... 0.98823529 0.99607843 0.89411765]] \n",
+      " [0.14509804 0.14901961 0.14509804 ... 0.45490196 0.38039216 0.2745098 ]\n",
+      " [0.02745098 0.02745098 0.02745098 ... 0.07843137 0.07058824 0.0627451 ]] \n",
       "\n",
       "y_test:\n",
-      " [[0.]\n",
+      " [[1.]\n",
+      " [0.]\n",
+      " [1.]\n",
+      " [0.]\n",
+      " [0.]\n",
+      " [0.]\n",
       " [1.]\n",
       " [0.]\n",
       " [1.]\n",
-      " [1.]\n",
-      " [0.]\n",
-      " [1.]\n",
-      " [1.]\n",
-      " [0.]\n",
-      " [0.]] \n",
+      " [1.]] \n",
       "\n"
      ]
     }
@@ -273,13 +273,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ncp = y_pred\n",
+    "tnp = y_test.reshape((-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Accuracy: 0.5\n",
+      "\n",
       "('              precision    recall  f1-score   support\\n'\n",
       " '\\n'\n",
       " '         0.0       0.50      0.20      0.29         5\\n'\n",
@@ -293,7 +305,9 @@
    ],
    "source": [
     "# Metrics\n",
+    "accuracy = np.sum(ncp==tnp)/len(y_test)\n",
     "cls_report = classification_report(y_pred=y_pred, y_true=y_test)\n",
+    "print(f'Accuracy: {accuracy}\\n')\n",
     "pprint.pprint(cls_report)"
    ]
   }
